Quick fix to avoid unexpected word breaks in panels.  Add ‘.breakword’ selector for better handling of long name wrapping.

--- a/koala/static/sass/koala.scss
+++ b/koala/static/sass/koala.scss
@@ -205,6 +205,10 @@ a.has-tip {
     max-width: 260px;
 }
 
+.breakword {
+    word-wrap: break-word;
+}
+
 .sub-nav {
     position: relative;
     top: -1.5rem;
@@ -293,18 +297,6 @@ a.circle {
     }
     small {
         font-size: 0.825rem;
-    }
-}
-
-#pagetitle {
-    .back-arrow {
-        display: inline-block;
-        font-family: Verdana, Helvetica, sans-serif;
-        font-weight: bold;
-        font-size: 1.5rem;
-        padding-right: 0.8rem;
-        border-right: 1px solid darken($euca-extralightblue, 30%);
-        margin-right: 0.8rem;
     }
 }
 
@@ -498,7 +490,6 @@ textarea.hidden {
 ----------------------------------------- */
 .panel{
     &.has-title {
-        word-break: break-all;
         position: relative;
         padding-top: 60px;
         border: none;
